--- a/test.tex
+++ b/test.tex
@@ -338,7 +338,7 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
 
-From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass \cite{Robles}. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
 The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
@@ -1302,7 +1302,7 @@ Numbers''. Foundations of Physics 15 (6), 683--691 (1985).
 \bibitem{Weigel} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
 d'espace d'une wustite de tri-incommensurabilite cubique et sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
-Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
+CRAS. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018).
 
