--- a/test.tex
+++ b/test.tex
@@ -1196,7 +1196,7 @@ two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
 \bibitem{Duplantier} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
 Poincare 1, 41--54 (2002).
 
-\bibitem{Damour} Damour T. ``The Entropy of Black Hole''. Sem. Poincare 2, 89--115 (2003).
+\bibitem{Damour} Damour T. ``The Entropy of Black Hole''. Sem. P. 2, 89--115 (2003).
 
 \bibitem{Kotov1} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
 and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
