--- a/test.tex
+++ b/test.tex
@@ -170,7 +170,7 @@ The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times th
 \textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, Bott reductions from n = 30 lead to the \textit{gauge bosons}: n = 22 for the GUT one, ($10^{16}$ GeV), n = 14 for the weak one and n = 6 for the (\textit{massive}) gluons, about 10 MeV.
 For the intermediary superstring value n = 10, there is the mean \textit{Pion}. For k $\approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal order, it is the \textit{Brout-Englert-Higgs boson} (125 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit $2\pi$ times the Nambu mass}, n = 24 corresponds to the \textit{photon mass}, while n $\approx 26$, to the \textit{graviton mass} \cite{Sanchez1}.}
-    \textit{The central dimension is n = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holographic relations. This suggests that the whole schema is tied to the Eddington's matrix $16\times 16$}.
+    \textit{The central dimension is n = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holographic relations, from which five were long reported. This suggests that the whole schema is tied to the Eddington's matrix $16\times 16$}.
 \label{fig:figure_label}
 \end{figure*}
 
