--- a/test.tex
+++ b/test.tex
@@ -338,7 +338,7 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
 
-From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass \cite{Robles}. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass \cite{Marchal}. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
 The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
@@ -1213,7 +1213,9 @@ syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220--221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
 
-\bibitem{Robles} Robles P. and Claro F. ``Can there be massive photons ? A pedagogical glance at the origin of mass''. European Journal of Physics. 33(5) 1217, (2012).
+\bibitem{Marchal} Marchal C. ``Physics with photons of non-zero rest mass``, Proceedings of 28th Intern. Workshop,p. 152-166. Protvino, Russia (2005).
+
+%\bibitem{Robles} Robles P. and Claro F. ``Can there be massive photons ? A pedagogical glance at the origin of %mass''. European Journal of Physics. 33(5) 1217, (2012).
 
 \bibitem{Tanabashi} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
 Group). ``The review of particle physics''. Phys. Rev. D, 98, 030001 (2018);
