--- a/test.tex
+++ b/test.tex
@@ -325,7 +325,7 @@ $
 \begin{equation}
 (\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
-so the best measured cosmic quantity, the Kotov period, implies a symmetry between gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata value \cite{Tanabashi}, but the later is the mean between discordant measurements. Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+so the best measured cosmic quantity, the Kotov period, implies a symmetry between gravitation and weak nuclear force. This specifies the $G$ valu*e to $10^{-6}$ precision (ppm). It is compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata value \cite{Tanabashi}, but the later is the mean between discordant measurements. Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
 \qquad  \qquad \Leftrightarrow \\
@@ -338,9 +338,9 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
 
-From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass \cite{Marchal}. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the holographic two-step interaction \cite{Sanchez1}, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
+The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.0 \% and 3.7\%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
