--- a/test.tex
+++ b/test.tex
@@ -340,7 +340,7 @@ This $t_K$ value will be confirmed, in the ppb range, by the value deduced from 
 
 From the holographic two-step interaction \cite{Sanchez1}, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.0 \% and 3.7\%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
+The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.9 \% and 3.7 \%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). Thus $f(26)/f(24) \approx a_w $ to 0.8 \%. The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
