--- a/test.tex
+++ b/test.tex
@@ -334,9 +334,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 This value will be confirmed, in the ppb range, in Section 9.
 
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
-
-This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. This $t_K$ value will be confirmed, in the ppb range, in section 9.4. 
 
 From the holographic two-step interaction \cite{Sanchez1}, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
