--- a/test.tex
+++ b/test.tex
@@ -479,8 +479,8 @@ T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s
 \end{equation}
 One would conceive it as the periodic time of a Super-cycle, which matches the Topological Axis at n = 30,
 the holic dimension (see section 6), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
-Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
-$$T/t_{K} \approx O_{M} /\sqrt{2}$$
+Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to 0.04 \% and 0.2 \%:
+$$T/t_{K} \approx O_{M} /\sqrt{2} \approx e^a / a_w $$
 where $O_{M}$, the cardinal order of the Monster Group, have been detected in the section 4.2, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_M$ chronon :
 \begin{equation}
 T/t_M \approx (3/e\sqrt{2})O_M^3
