--- a/test.tex
+++ b/test.tex
@@ -653,7 +653,14 @@ Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambda
 $ a/(a-1) \approx 3^{1/150} $. Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
 
 \subsection{The Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
+    Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. 
+In his last work \cite{Atiyah1} the Bernoulli function $x/(1-e^{-x})$ plays a central role. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
+\begin{equation}
+a \approx 44\pi - Arccos(1/e)
+\end{equation}
+a formula largely diffused on the web, but without indication of its origin.    
+    
+    Atiyah introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -828,35 +835,28 @@ with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms \cite{Sanchez
 Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
-The symmetry between $a$ and 137 is confirmed by the 83 ppb relation $a/137 \approx (p_0 H)^{1/2} /p$ involving $H$, the Hydrogen electron mass ratio. Also, there is the ppb relation: $p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. Another ppb relation, with $u = a/137$ is:
-$$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals $p_a = 6 (a^2 - 137 ^2)^{5/2}$, confirming again the Wyler formula (16 ppm):
-$$ X^3 \approx N_{sys} p_a /a^{3/2}$$
+The symmetry between $a$ and 137 is confirmed by the 83 ppb relation $a/137 \approx (p_0 H)^{1/2} /p$ involving $H$, the Hydrogen electron mass ratio. Also, there is the ppb relation: $p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. With $u = a/137$ another ppb relation is:
+$$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals the Wyler's form $p_W = 6 (a^2 - 137 ^2)^{5/2}$ (16 ppm):
+$$ X^3 \approx N_{sys} p_W /a^{3/2}$$
 The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one consider a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
-$$ C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a global effect in a homogeneous media (atomic coherence). This 
+$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a global effect in a homogeneous media (atomic coherence). This 
 Elimination of $q$ leads to (2.6 \%):
 $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$. 
-
-In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
-\begin{equation}
-a \approx 44\pi - Arccos(1/e)
-\end{equation}
-a formula largely diffused on the web, but without indication of its origin.
 
 \subsection {The Archimedes constant $\pi$ as a calculation base}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
 The value of the Topological Function for the main String
  dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
-$$(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
-The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
-2 \times 137$, confirming again the Rationalization Hypothesis. This leads to the rational value
-\begin{equation}
-\pi_{R} = (355u-22)/(113u-7) 
+\begin{equation} 
+(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi_R^{155}
 \end{equation}
-This corresponds to the above $G$ value to 10 ppb accuracy.
+The corresponding approximation $\pi_R$ of $\pi$ shows the fractional series 3, 7, 16, -u, with $u \approx
+2 \times 137$, confirming again the Rationalization Hypothesis. This leads to the rational value
+$\pi_{R} = (355u-22)/(113u-7)$. This corresponds to the above $G$ value to 10 ppb accuracy.
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
 $2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. Whole powers of $\pi$ appears in the even order Riemann series, and in:
 $a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). Moreover, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
