--- a/test.tex
+++ b/test.tex
@@ -795,10 +795,11 @@ Thus, \textit{the Atiyah symmetry infers a relation between the three mathematic
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-Since some dimensionless physical parameters are very precisely measured, we looked for
-relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
-0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
-cosmic radius and the Topological Axis.
+We look here for relations involving $e$, $\pi$ and $\Gamma \approx, noting firstly that (6.5 ppm):
+\begin{equation}
+p \approx \Gamma (\pi e)^2
+\end{equation}
+confirming the central role of Atiyah's constant $\Gamma$. 
 
 \subsection {The optimal calculation base $e$ confirmed}
 
