--- a/test.tex
+++ b/test.tex
@@ -794,9 +794,12 @@ Thus, \textit{the Atiyah symmetry infers a relation between the three mathematic
 \section{The fine-tuning with basic mathematical constants}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
+We look here for relations involving basic mathematical constants, noting firstly that, to 6.5 ppm:
+\begin{equation}
+p \approx \Gamma (\pi e)^2 
+\end{equation}
+confirming the central role of Atiyah's constant (section 8.2).
  
-
 \subsection {The optimal calculation base $e$ confirmed}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
