--- a/test.tex
+++ b/test.tex
@@ -691,20 +691,20 @@ where $W$ is the W boson-Electron mass ratio. Now, to 30 ppm and 20 ppm :
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
-Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen radius $a^{\prime} = aH/p$, to 0.3ppm and 0.3 \%:
-\begin{equation}
-\sqrt{\beta} F^3/a^{\prime} \approx (e/3)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
-\end{equation}
-confirming that $j$ and $\Gamma$ are generalised dimension, i.e. are privileged exponents, calling for further study.
+%Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen radius $a^{\prime} = aH/p$, to %0.3ppm and 0.3 \%:
+%\begin{equation}
+%\sqrt{\beta} F^3/a^{\prime} \approx (e/3)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
+%\end{equation}
+%confirming that $j$ and $\Gamma$ are generalised dimension, i.e. are privileged exponents, calling for further %study.
 
-Note that (Fig 1.):
-\begin{equation}
-m_{e} c^{2} f(\gamma\Gamma) \approx 125.2~ GeV
-\end{equation}
-is close to the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $ to 30 ppb.
-The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
-$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
-meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
+%Note that (Fig 1.):
+%\begin{equation}
+%m_{e} c^{2} f(\gamma\Gamma) \approx 125.2~ GeV
+%\end{equation}
+%is close to the Higgs Boson energy, 
+%The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group %radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
+%$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
+%meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx %\Gamma$.
 %One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 %$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
 %(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence %of the %$20^{th}$ power of $F$, corresponding to the 20 normal amino-acids.  
@@ -829,7 +829,7 @@ The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Full Hologr
 R_{GC}/\lambdabar_M  \approx (137e/a)^{420}  
 \end{equation}
 exhibiting (0.3 ppm): $ (a/137)^{420} \approx (137 - 3)/120 $  
-with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms \cite{Sanchez1} 
+with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms\cite{Sanchez1}. 
 
 \subsection {The Lenz-Wyler's Formula}
 Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
@@ -838,12 +838,11 @@ of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ a
 The symmetry between $a$ and 137 is confirmed by the 83 ppb relation $a/137 \approx (p_0 H)^{1/2} /p$ involving $H$, the Hydrogen electron mass ratio. Also, there is the ppb relation: $p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. With $u = a/137$ another ppb relation is:
 $$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals the Wyler's form $p_W = 6 (a^2 - 137 ^2)^{5/2}$ (16 ppm):
 $$ X^3 \approx N_{sys} p_W /a^{3/2}$$
-The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one consider a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
+The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one considers a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $ shows the neutron/electron mass ratio $n$. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
-$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a global effect in a homogeneous media (atomic coherence). This 
-Elimination of $q$ leads to (2.6 \%):
+$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a global effect in a homogeneous media (atomic coherence). This elimination of $q$ leads to (2.6 \%):
 $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation base}
@@ -956,7 +955,8 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-This gives a central role to the Tifft ratio $F/137$ (section 4.4), and so proposing a Higgs ratio $s \approx 495.88^2$, corresponding to 125.65 GeV. Also, in the Topological Axis, it corresponds with $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1)..
+
+This gives a central role to the Tifft ratio $F/137$ (section 4.4), and so proposing a Higgs ratio $s \approx 495.88^2 $, corresponding to 125.65 GeV. Also, in the Topological Axis (Fig. 1), it corresponds with $k \approx \pi $, and n $\approx \gamma \Gamma \approx (4\pi + 2) (p/d_e p_0)^2$, to 30 ppb.
 Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$
 
