--- a/test.tex
+++ b/test.tex
@@ -939,7 +939,18 @@ The standard model is unable to explain why there are three famillies of particl
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (31), leading to: (2 ppm), with a role of $a^{\prime} = r_H/\lambdabar_e = aH/p$ (0.16 ppm) :
+This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ enters (48 and 36 ppm):
+$$ \Gamma a/p_K \approx \tau^{1/13} \approx \mu^(2/17)$$
+since $\gamma \approx \tau$ to 7 \%, this precises the relations (1 and 0.1\%):
+$$ \tau \approx H^{13/12}$$
+$$ \mu \approx  a^{13/12}$$
+This confirms the Eddington's prediction of $tau$, with the right order of mass, he called the Heavy Mesotron, 30 before its surprising discovery. Note that (3.7 and 2.1 \%):
+$$ f(24) \approx a^{13} \approx \mu^{12}$$
+More precisely, to 25 ppm:
+$$\tau H/n \approx (2aF^2/W^2p_K Z^2)^{12}$$
+From $aF^2/W^$ 2 \approx p$, this shows that the root is $tau \approx q \approx 2p$, with q = 2^{12}, the key number in section 9.2.   
+
+The constant $p_K$ has also been detected in Eq. (31), leading to: (2 ppm), with a role of $a^{\prime} = r_H/\lambdabar_e = aH/p$ (0.16 ppm) :
 \begin{equation}
 p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 137a/136(a^{\prime}-1) d_e
 \end{equation}
