--- a/test.tex
+++ b/test.tex
@@ -939,7 +939,7 @@ The standard model is unable to explain why there are three famillies of particl
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ enters (48 and 36 ppm):
+This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$, enters (48 and 36 ppm):
 $$ \Gamma a/p_K \approx \tau^{1/13} \approx \mu^(2/17)$$
 since $\gamma \approx \tau$ to 7 \%, this precises the relations (1 and 0.1\%):
 $$ \tau \approx H^{13/12}$$
@@ -947,8 +947,8 @@ $$ \mu \approx  a^{13/12}$$
 This confirms the Eddington's prediction of $tau$, with the right order of mass, he called the Heavy Mesotron, 30 before its surprising discovery. Note that (3.7 and 2.1 \%):
 $$ f(24) \approx a^{13} \approx \mu^{12}$$
 More precisely, to 25 ppm:
-$$\tau H/n \approx (2aF^2/W^2p_K Z^2)^{12}$$
-From $aF^2/W^$ 2 \approx p$, this shows that the root is $tau \approx q \approx 2p$, with q = 2^{12}, the key number in section 9.2.   
+$$\tau H/n \approx (2aF^2/W^2p_K)^{12}$$
+From $aF^2/W^2 \approx p$, this shows that the common origin of this Tau-Proton symmetry, completly ignored by the standard theory, is $tau \sim q \sim 2p$, with q = 2^{12}, the key number in section 9.2.   
 
 The constant $p_K$ has also been detected in Eq. (31), leading to: (2 ppm), with a role of $a^{\prime} = r_H/\lambdabar_e = aH/p$ (0.16 ppm) :
 \begin{equation}
@@ -1165,7 +1165,7 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
       This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
-\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton and gluons.
+\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton and gluons. Also the supersymmetry will restablish the Eddington's connection Proton-Tau.
 \item 4/ Computational software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
 \item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
