--- a/test.tex
+++ b/test.tex
@@ -948,7 +948,7 @@ This confirms the Eddington's prediction of $tau$, with the right order of mass,
 $$ f(24) \approx a^{13} \approx \mu^{12}$$
 More precisely, to 25 ppm:
 $$\tau H/n \approx (2aF^2/W^2p_K)^{12}$$
-From $aF^2/W^2 \approx p$, this shows that the common origin of this Tau-Proton symmetry, completly ignored by the standard theory, is $tau \sim q \sim 2p$, with q = 2^{12}, the key number in section 9.2.   
+From $aF^2/W^2 \approx p$, this shows that the common origin of this Tau-Proton symmetry, completly ignored by the standard theory, is $tau \sim q \sim 2p$, with $q = 2^{12}$, the key number in section 9.2.   
 
 The constant $p_K$ has also been detected in Eq. (31), leading to: (2 ppm), with a role of $a^{\prime} = r_H/\lambdabar_e = aH/p$ (0.16 ppm) :
 \begin{equation}
