--- a/test.tex
+++ b/test.tex
@@ -1163,12 +1163,12 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 %In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably.
 
       This article leads to many predictions, in particular:
-\item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
+\item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the imperfect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
 \item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton and gluons. Also the supersymmetry will restablish the Eddington's connection Proton-Tau.
-\item 4/ Computational software should be boosted by the principle of multi-base computation.
-\item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
-\item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
+\item 4/ The computational software should be boosted by the principle of multi-base computation.
+\item 5/ The DNA chain will reveal as a 1D temporal hologram, see \cite{Widom}.
+\item 6/ The Lucas-Lehmer series, in connection with the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
 \item 8/ The Eddington's Fundamental Theory will be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 \item 9/ The Moulin systemic approach will be reconsidered.
